RESOLVED FIXED301736
[Swift in WebKit] Fix some missing includes and compile guards in WTF
https://bugs.webkit.org/show_bug.cgi?id=301736
Summary [Swift in WebKit] Fix some missing includes and compile guards in WTF
Richard Robinson
Reported 2025-10-30 19:29:37 PDT
.
Attachments
Radar WebKit Bug Importer
Comment 1 2025-10-30 19:29:43 PDT
Richard Robinson
Comment 2 2025-10-30 19:32:07 PDT
EWS
Comment 3 2025-10-31 00:42:29 PDT
Committed 302374@main (543dd66c35df): <https://commits.webkit.org/302374@main> Reviewed commits have been landed. Closing PR #53238 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.