[Swift in WebKit] Fix some missing includes and compile guards in WTF https://bugs.webkit.org/show_bug.cgi?id=301736 rdar://163760601

Reviewed by Aditya Keerthi.

Fix some issues in WTF that prevent proper modularization:

- Add some missing include statements (since all headers must be self-contained)
- Add some missing Cocoa / ObjC guards (since all headers must work with both C++ and Obj-C++)

* Source/WTF/wtf/AbstractCanMakeCheckedPtr.h:
* Source/WTF/wtf/BlockObjCExceptions.h:
* Source/WTF/wtf/NotFound.h:
* Source/WTF/wtf/ObjCRuntimeExtras.h:
* Source/WTF/wtf/TypeCasts.h:
* Source/WTF/wtf/TypeTraits.h:
* Source/WTF/wtf/ValidatedReinterpretCast.h:
* Source/WTF/wtf/VectorHash.h:
* Source/WTF/wtf/cocoa/NSStringExtras.h:
* Source/WTF/wtf/cocoa/NSURLExtras.h:
* Source/WTF/wtf/cocoa/TypeCastsCocoa.h:
* Source/WTF/wtf/cocoa/VectorCocoa.h:
* Source/WTF/wtf/spi/cocoa/NSLocaleSPI.h:
* Source/WTF/wtf/spi/cocoa/NSObjCRuntimeSPI.h:
* Source/WTF/wtf/spi/darwin/ReasonSPI.h:
* Source/WTF/wtf/spi/mac/MetadataSPI.h:
* Source/WTF/wtf/text/cf/TextBreakIteratorCF.h:
* Source/WTF/wtf/text/cf/TextBreakIteratorCFCharacterCluster.h:
* Source/WTF/wtf/text/cf/TextBreakIteratorCFStringTokenizer.h:
* Source/WTF/wtf/text/cocoa/ContextualizedCFString.h:
* Source/WTF/wtf/text/cocoa/ContextualizedNSString.h:

Canonical link: https://commits.webkit.org/302374@main