Source/WTF/wtf/spi/cocoa/NSLocaleSPI.h
@@ -27,6 +27,8 @@
 
 DECLARE_SYSTEM_HEADER
 
+#ifdef __OBJC__
+
 #import <Foundation/Foundation.h>
 
 #if USE(APPLE_INTERNAL_SDK)
@@ -40,3 +42,4 @@ DECLARE_SYSTEM_HEADER
 + (nonnull NSArray<NSString *> *)matchedLanguagesFromAvailableLanguages:(nonnull NSArray<NSString *> *)availableLanguages forPreferredLanguages:(nonnull NSArray<NSString *> *)preferredLanguages;
 @end
 
+#endif // __OBJC__
