Source/WTF/wtf/text/cf/TextBreakIteratorCFStringTokenizer.h
@@ -20,12 +20,18 @@
 
 #pragma once
 
+#if PLATFORM(COCOA)
 #include <CoreFoundation/CoreFoundation.h>
+#endif
+
+#include <wtf/Platform.h>
 #include <wtf/RetainPtr.h>
 #include <wtf/spi/cf/CFStringSPI.h>
 #include <wtf/text/AtomString.h>
 #include <wtf/text/StringView.h>
 #include <wtf/text/cocoa/ContextualizedCFString.h>
+
+#if PLATFORM(COCOA)
 
 namespace WTF {
 
@@ -130,3 +136,5 @@ private:
 };
 
 }
+
+#endif // PLATFORM(COCOA)
